fix aspect ratio of images, decrease the scrollbar height

--- a/src/Components/Pages/Home/Reviews/Reviews.module.scss
+++ b/src/Components/Pages/Home/Reviews/Reviews.module.scss
@@ -5,6 +5,7 @@
 
 ::-webkit-scrollbar {
   width: 10px;
+  height: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
@@ -19,4 +20,5 @@
 .reviewContainer {
   display: flex;
   flex-direction: row;
+  scrollbar-width: 1px;
 }
